<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme = "@style/AppTheme.NoActionBar"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="left|top">

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            app:srcCompat="@android:drawable/ic_popup_sync" />

        <TextView
            android:id="@+id/city_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnUpdate"
            android:gravity="center_horizontal"
            android:text="@string/default_unknown_city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_light" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_above="@+id/current_temperature_field"
            android:layout_centerHorizontal="true"
            app:srcCompat="@android:drawable/dialog_holo_light_frame" />

        <TextView
            android:id="@+id/current_temperature_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_temp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_light"
            android:textSize="70sp" />

        <LinearLayout
            android:id="@+id/extra_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_temperature_field"
            android:layout_above="@+id/summary_weather"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humidity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/humidity_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/humidity_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="-- %"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_light"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rain_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/rain_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rain_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="-- %"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_light"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/summary_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/default_summary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_light"
            android:paddingBottom="@dimen/fab_margin"
            android:textSize="20sp" />

        <ViewStub
            android:id="@+id/permission_rationale_stub"
            android:inflatedId="@+id/permission_rationale"
            style="@style/PermissionRationale"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>